--- a/05aula/exercicio.html
+++ b/05aula/exercicio.html
@@ -11,6 +11,7 @@
 <body>
     <center>
         <table border="black 15px">
+            <caption>DesControle Financeiro</caption> <!-- Descreve a tabela-->
             <thead> <!--Thead = Define o cabeçalho da tabela-->
                 <tr id="gastos">
                     <th colspan="4">Gastos do Mês</th>
@@ -23,31 +24,31 @@
                 </tr>
             </thead>
             <tbody> <!-- Tbody = define o corpo/conteúdo da tabela-->
-            <tr id="maio">
-                <td>Maio</td>
-                <td>R$ 2.650,00</td>
-                <td>R$ 1.900,00</td>
-                <td>R$ 750,00</td>
-            </tr>
-            <tr id="junho">
-                <td>Junho</td>
-                <td>R$ 1.600,00</td>
-                <td>R$ 1.900,00</td>
-                <td>-R$ 300,00</td>
-            </tr>
-            <tr id="julho">
-                <td>Julho</td>
-                <td>R$ 1.200,00</td>
-                <td>R$ 1.900,00</td>
-                <td>-R$ 700,00</td>
-            </tr>
-        </tbody>
-        <tfoot> <!-- Tfoot = NA TABELA o foot exibe/guarda os resultados-->
-            <td>Periodos</td>
-            <td>R$ 5.450,00</td>
-            <td>R$ 5.700,00</td>
-            <td>-R$ 250,00</td>
-        </tfoot>
+                <tr id="maio">
+                    <td>Maio</td>
+                    <td>R$ 2.650,00</td>
+                    <td>R$ 1.900,00</td>
+                    <td>R$ 750,00</td>
+                </tr>
+                <tr id="junho">
+                    <td>Junho</td>
+                    <td>R$ 1.600,00</td>
+                    <td>R$ 1.900,00</td>
+                    <td>-R$ 300,00</td>
+                </tr>
+                <tr id="julho">
+                    <td>Julho</td>
+                    <td>R$ 1.200,00</td>
+                    <td>R$ 1.900,00</td>
+                    <td>-R$ 700,00</td>
+                </tr>
+            </tbody>
+            <tfoot> <!-- Tfoot = NA TABELA o foot exibe/guarda os resultados-->
+                <td>Periodos</td>
+                <td>R$ 5.450,00</td>
+                <td>R$ 5.700,00</td>
+                <td>-R$ 250,00</td>
+            </tfoot>
         </table>
     </center>
 </body>
